--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,43 @@ __pycache__
 .idea
 tempCodeRunnerFile.py
 .vscode/launch.json
+
+### venv ###
+# Virtualenv
+# http://iamzed.com/2009/05/07/a-primer-on-virtualenv/
+[Bb]in
+[Ii]nclude/
+[Ll]ib/
+[Ll]ib64
+[Ll]ocal
+[Ss]cripts/
+pyvenv.cfg
+pip-selfcheck.json
+.vscode
+
+# IPython
+profile_default/
+ipython_config.py
+
+# pyenv
+.python-version
+
+# PEP 582; used by e.g. github.com/David-OConnor/pyflow
+__pypackages__/
+
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+pythonenv*  
+
+# Environments
+lib/
+Lib/
+Scripts/
+share/
+
