--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "python.formatting.provider": "autopep8",
     "code-runner.clearPreviousOutput": true,
+    "terminal.integrated.shell.windows": null,
 }
