--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,4 +7,17 @@
     "code-runner.executorMap": {
         "python": "$pythonPath  -u $fullFileName",
     },
+    "python.testing.pytestArgs": [
+        "."
+    ],
+    "python.testing.unittestEnabled": true,
+    "python.testing.nosetestsEnabled": false,
+    "python.testing.pytestEnabled": false,
+    "python.testing.unittestArgs": [
+        "-v",
+        "-s",
+        ".",
+        "-p",
+        "*_test.py"
+    ],
 }
