--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,8 @@
     "python.autoComplete.extraPaths": [
         "${workspaceFolder}\\Lib\\site-packages",
         "C:\\python\\385\\Lib",
-        "C;\\python\\391\\Lib"
+        "C:\\Python\\391\\Lib",
+        "C:\\Python\\385\\Lib"
     ],
     "code-runner.executorMap": {
         "python": "$pythonPath  -u $fullFileName",
