--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,4 +30,7 @@
     ],
     "code-runner.clearPreviousOutput": true,
     "python.testing.promptToConfigure": false,
+    "cSpell.ignoreWords": [
+        "niveis"
+    ],
 }
