new challenges added

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
     ],
     "code-runner.clearPreviousOutput": true,
     "code-runner.runInTerminal": true,
+    "code-runner.showExecutionMessage": false,
     "code-runner.executorMap": {
         "python": "$pythonPath  -u $fullFileName",
     },
