--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "python.formatting.provider": "black",
+  "python.formatting.provider": "autopep8",
   "python.venvPath": "${workspaceFolder}/venv",
   "python.autoComplete.extraPaths": [
     "${workspaceFolder}\\Lib",
